tests/PhiCore/compile_failure/src/Core/NotNullFlatPtr.assign_nullptr.fail.cpp
#include <Phi/Core/FlatPtr.hpp>

int main()
{
    int                 i = 16;
    phi::NotNullFlatPtr ptr(&i);

    ptr = nullptr;
}
